{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 28,
  "lineage": "5e421573-99b2-883f-cbe2-31530640463b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-03-07T09:28:37.285-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rosy-hope-489506-p3/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/networks/school-erp-vpc",
            "priority": 1000,
            "project": "rosy-hope-489506-p3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-07T09:28:37.449-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rosy-hope-489506-p3/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/networks/school-erp-vpc",
            "priority": 1000,
            "project": "rosy-hope-489506-p3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260210",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/zones/us-central1-a/disks/school-erp-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/rosy-hope-489506-p3/zones/us-central1-a/instances/school-erp-db",
            "instance_id": "509369277401390731",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "eS2zlcjRNWw=",
            "metadata_startup_script": "#!/bin/bash\r\n    \r\n# Install PostgreSQL\r\napt-get update\r\napt-get install -y postgresql postgresql-contrib\r\n\r\n# Start and enable the service\r\nsystemctl start postgresql\r\nsystemctl enable postgresql\r\n\r\n# Configure PostgreSQL for remote access\r\nsed -i \"s/#listen_addresses = 'localhost'/listen_addresses = '*'/g\" /etc/postgresql/15/main/postgresql.conf\r\n    \r\n# Allow connections from the VPC subnet\r\necho \"host all all 10.0.1.0/24  [...]
            "name": "school-erp-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.49.189",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/networks/school-erp-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/regions/us-central1/subnetworks/school-erp-subnet",
                "subnetwork_project": "rosy-hope-489506-p3"
              }
            ],
            "project": "rosy-hope-489506-p3",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/zones/us-central1-a/instances/school-erp-db",
            "service_account": [
              {
                "email": "erp-db-sa@rosy-hope-489506-p3.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "erp-db"
            ],
            "tags_fingerprint": "SZGkfCbpzi4=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_service_account.db_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/rosy-hope-489506-p3/global/networks/school-erp-vpc",
            "mtu": 0,
            "name": "school-erp-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2840014279640473302",
            "project": "rosy-hope-489506-p3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/networks/school-erp-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-07T09:28:38.603-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/rosy-hope-489506-p3/regions/us-central1/subnetworks/school-erp-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "school-erp-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/global/networks/school-erp-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rosy-hope-489506-p3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rosy-hope-489506-p3/regions/us-central1/subnetworks/school-erp-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}